attempt at fixing share cards

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="Undoctrination"/>
+    <meta name="twitter:title" content="Undoctrination"/>
+    <meta name="og:type" content="website"/>
+    <meta name="og:description" content="test"/>
+    <meta name="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
