added twitter image share card

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,8 +13,8 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="Undoctrination"/>
     <meta name="twitter:title" content="Undoctrination"/>
+    <meta name="twitter:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:description" content="test"/>
     <meta name="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
