--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/assets/images/thumbnails/undoctrination_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+    <!-- <meta
       name="description"
       content="Web site created using create-react-app"
-    />
+    /> -->
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="Undoctrination"/>
