--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/assets/images/thumbnails/undoctrination_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fff" />
     <!-- <meta
       name="description"
       content="Web site created using create-react-app"
@@ -13,7 +13,7 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="Undoctrination"/>
     <meta name="twitter:title" content="Undoctrination"/>
-    <meta name="twitter:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
+    <meta name="twitter:image" content="./assets/images/thumbnails/undoctrination_icon.png"/>
     <meta name="og:type" content="website"/>
     <meta name="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
 
