--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,9 +13,9 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="Undoctrination"/>
     <meta name="twitter:title" content="Undoctrination"/>
-    <meta name="twitter:image" content="./assets/images/thumbnails/undoctrination_icon.png"/>
+    <meta name="twitter:image" content="https://imgur.com/GB7MJX3"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
+    <meta name="og:image" content="https://imgur.com/GB7MJX3"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
