further share testing

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,12 +10,12 @@
       content="Web site created using create-react-app"
     /> -->
 
-    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="Undoctrination"/>
     <meta name="twitter:title" content="Undoctrination"/>
     <meta name="twitter:image" content="https://imgur.com/GB7MJX3"/>
-    <meta name="og:type" content="website"/>
-    <meta name="og:image" content="https://imgur.com/GB7MJX3"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="https://imgur.com/GB7MJX3"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
