--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,9 +15,9 @@
     <meta name="twitter:title" content="Undoctrination"/>
     <meta name="twitter:image" content="https://imgur.com/GB7MJX3"/>
     <meta name="twitter:image:alt" content="Undoctrination Icon"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://imgur.com/GB7MJX3"/>
-    <meta property="og:image:alt" content="Undoctrination Icon"/>
+    <meta name="og:type" content="website"/>
+    <meta name="og:image" content="https://imgur.com/GB7MJX3"/>
+    <meta name="og:image:alt" content="Undoctrination Icon"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
