finalized facebook share card

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,9 +16,8 @@
     <meta name="twitter:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
     <meta name="twitter:image:alt" content="Undoctrination Icon"/>
     <meta name="og:type" content="website"/>
-    <meta name="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
     <meta property="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
-    <meta name="og:image:alt" content="Undoctrination Icon"/>
+    <meta property="og:image:alt" content="Undoctrination Icon"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
