--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,10 +13,10 @@
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="Undoctrination"/>
     <meta name="twitter:title" content="Undoctrination"/>
-    <meta name="twitter:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
+    <meta name="twitter:image" content="www.undoctrination.com/assets/images/thumbnails/undoctrination_icon.png"/>
     <meta name="twitter:image:alt" content="Undoctrination Icon"/>
     <meta name="og:type" content="website"/>
-    <meta property="og:image" content="/assets/images/thumbnails/undoctrination_icon.png"/>
+    <meta property="og:image" content="www.undoctrination.com/assets/images/thumbnails/undoctrination_icon.png"/>
     <meta property="og:image:alt" content="Undoctrination Icon"/>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
