--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     /> -->
+    <meta name="google-site-verification" content="f5RfWLTTnqe_3nlMtshGMger2HQ1SXgdW4gwkkYP2MI" />
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="Undoctrination"/>
